Refactor documentations
